@@ -1,3 +1,8 @@
+2005-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: New users were unable to setup their user
+	information. Solved by ensuring that myId is always set.
+
 2005-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Changed the way we use tile widgets to work with
